<resources>
    <string name="app_name">Sample</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_text">Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</string>
    <string name="read_more">Read More</string>
    <string name="update">Update</string>
    <string name="breaking_news">Breaking News</string>
    <string name="online_book_store">Online Book Store</string>
    <string name="no_tasks_added">NO TASKS ADDED</string>
    <string name="search">Search</string>
    <string name="weather">Weather</string>
    <string name="show_weather">Show Weather</string>
    <string name="welcome">WELCOME</string>
    <string name="to_online_shopping_book_store">To online shopping book store</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="login">login</string>
    <string name="new_user_sign_up">don\'t have an account? sign up</string>
    <string name="register">REGISTER</string>
    <string name="already_a_member_login">already a member? login</string>
    <string name="write_your_task_here">Write your task here</string>
    <string name="priority">Priority</string>
    <string name="add_new_task">Add New Task</string>
    <string name="time">Time</string>
    <string name="category">Category</string>
    <string name="none">None</string>
    <string name="add_task">add task</string>
    <string name="change_language">Change Language</string>
    <string name="select_language">Select Language</string>
    <string name="invalid_input">Validate all fields</string>
    <string name="book_store">Book Store</string>
    <string name="for_better_purpose">For better purpose</string>
    <string name="news">News</string>
    <string name="to_do">To Do</string>
    <string name="logout">Logout</string>
    <string name="close">close</string>
    <string name="open">open</string>

    <string name="the_hobbit">The Hobbit</string>
    <string name="the_famous_five">The Famous Five</string>
    <string name="update_task">Update Task</string>
    <string name="delete">Delete</string>
    <string name="high">High</string>
    <string name="cancel">Cancel</string>

    <string-array name="priorities">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

</resources>